--- a/google.scholar.bib
+++ b/google.scholar.bib
@@ -266,7 +266,7 @@
   year={2019}
 }
 
-@incollection{finn2019deterministicArch,
+@incollection{finn2019deterministic,
   title={Deterministic networking architecture},
   author={Finn, Norman and Thubert, Pascal and Varga, Balazs and Farkas, J{\'a}nos},
   booktitle={RFC 8655},
@@ -366,4 +366,13 @@
   pages={1--7},
   year={2022},
   organization={VDE}
+}
+
+@inproceedings{ma2023network,
+  title={Network characteristics of LEO satellite constellations: A Starlink-based measurement from end users},
+  author={Ma, Sami and Chou, Yi Ching and Zhao, Haoyuan and Chen, Long and Ma, Xiaoqiang and Liu, Jiangchuan},
+  booktitle={IEEE INFOCOM 2023-IEEE Conference on Computer Communications},
+  pages={1--10},
+  year={2023},
+  organization={IEEE}
 }
