--- a/mainmatter/01_introduction.tex
+++ b/mainmatter/01_introduction.tex
@@ -102,5 +102,8 @@ This thesis will follow a simple 5 chapter structure. This section concludes the
 \nocite{artiga2016terrestrial}
 \nocite{rodriguez2004mar}
 \nocite{deutschmann2022broadband}
-\nocite{murmurhash3}
+\nocite{ma2023network}
+\nocite{appleby2012murmurhash3}
+
+%%=========================================
 
