--- a/mainmatter/02_background.tex
+++ b/mainmatter/02_background.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../thesis.tex
 
 \cleardoublepage
-\chapter{Background and Related Work}
+\chapter{Background Information and Related Work}
 \label{cha:background}
 
 \section{Mobile Networks and Backhaul}
